added support for logging errors on javac log (required upgrade to java 11 due to issue with registering resource bundles for custom error message under jdk 8)